[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "session_router"
version = "0.1.0"
description = "A package for keeping CAIs application modules"
authors = [{name = "Kourosh Hakhamaneshi"}]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
